# docs/swagger.yaml
@@ -126,6 +126,10 @@ paths:
         in: query
         name: blog_name
         type: string
+      - description: AI 요약 완료 여부
+        in: query
+        name: status_ai_summarized
+        type: boolean
       produces:
       - application/json
       responses:
